Build 3.2.1.GA
=============================

** Known BREAKING CHANGES from NH3.2.0.GA to NH3.2.1.GA

	##### Possible Breaking Changes #####
		* [NH-2950] - IAccessCallback.NextValue property renamed and changed to a method called IAccessCallback.GetNextValue()

Build 3.2.0.GA (rev6000)
=============================

** Known BREAKING CHANGES from NH3.1.0.GA to NH3.2.0.GA

	##### Design time #####
		* removed obsolete "use_outer_join" property from nhibernate-configuration.xsd (simply remove it from your xml configuration)

	##### Possible Breaking Changes #####
		* All Dialect.GetLimitString() methods replaced with a single GetLimitString method with a new signature.
		  For dialects the developers don't perform routine tests on, efforts were made to ensure the new limit string
		  method conforms to the database documentation.  Please report any limit-related bugs discovered at runtime.
		* [NH-2550] - Allow public access to FieldInterceptor Session (IFieldInterceptor changed)
		* [NH-2593] - For Microsoft SQL Server the default batch-size (adonet.batch_size) is set to 20 where not explicit defined in the session-factory configuration
		* - ICollectionPersister added property to fix [NH-2489]
		* [NH-2605] Refactorize MultiQuery/MultiCriteria implementation to delegate responsibility to IDrive (IDrive changed).
		* For users who don't look at Log-ERROR, to prevent wrong behavior when lazy-properties are used the DynamicProxyValidator validates the accessability of properties setters.
		* For those implementing IDrive without inherit from DriveBase: IDrive.AdjustCommand
		* Dialect base: removed some no more needed properties

** Bug
    * [NH-2792] - Using a named parameter multiple times in a native SQL query results in invalid parameter binding (exception in some drivers)
    * [NH-2813] - Cache DefaultExpiration type is "byte"

** Improvement
    * [NH-2571] - Full PostgreSQL Support
    * [NH-2743] - Generic version of ISession.Merge()